CNCF/AppDefinitionDevelopment/ContinuousIntegrationDelivery/gitlab/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: default
spec:
  rules:
  - host: yakir-gitlab.yakir.com
    http:
      paths:
      - backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.20.205.105
    - ip: 172.20.205.106
    - ip: 172.20.205.98
